--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "materialize-css": "^1.0.0-rc.2",
     "pg-promise": "^8.5.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
